Fixed horizontal scroll
This commit fixes horizontal scroll in single prouct page.

--- a/assets/css/_display.scss
+++ b/assets/css/_display.scss
@@ -8,3 +8,7 @@
         opacity: 1;
     }
 }
+
+body {
+    overflow-x: hidden;
+}
